--- a/diffusors_colab.ipynb
+++ b/diffusors_colab.ipynb
@@ -1,21 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "machine_shape": "hm",
-      "gpuType": "V100"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -29,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'diffusors'...\n",
             "remote: Enumerating objects: 175, done.\u001b[K\n",
@@ -48,9 +31,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!nvidia-smi"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -58,11 +39,10 @@
         "id": "Oz-hwa3h8ydn",
         "outputId": "924633da-e5fa-4d26-a907-3288f25a618d"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Thu Sep 28 09:29:24 2023       \n",
             "+-----------------------------------------------------------------------------+\n",
@@ -86,13 +66,14 @@
             "+-----------------------------------------------------------------------------+\n"
           ]
         }
+      ],
+      "source": [
+        "!nvidia-smi"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python --version"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -100,22 +81,22 @@
         "id": "Xpt2Oor0E2GK",
         "outputId": "a5f0e486-6a24-49c2-f60f-ad33b2fbbeda"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Python 3.10.12\n"
           ]
         }
+      ],
+      "source": [
+        "!python --version"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install pytorch-lightning==2.0.9 torch torchvision numpy pandas matplotlib  scipy scikit-learn panel pytest click torchaudio  wandb torchmetrics accelerate datasets monai einops ema-pytorch\n"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -123,11 +104,10 @@
         "id": "mCTBj9S98ZBw",
         "outputId": "4068f3b0-9f2d-4ed7-e1bb-26445ca5e985"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting pytorch-lightning==2.0.9\n",
             "  Downloading pytorch_lightning-2.0.9-py3-none-any.whl (727 kB)\n",
@@ -263,14 +243,15 @@
             "Successfully installed GitPython-3.1.37 accelerate-0.23.0 datasets-2.14.5 dill-0.3.7 docker-pycreds-0.4.0 einops-0.6.1 ema-pytorch-0.2.3 gitdb-4.0.10 huggingface-hub-0.17.3 lightning-utilities-0.9.0 monai-1.2.0 multiprocess-0.70.15 pathtools-0.1.2 pytorch-lightning-2.0.9 sentry-sdk-1.31.0 setproctitle-1.3.2 smmap-5.0.1 torchmetrics-1.2.0 wandb-0.15.11 xxhash-3.3.0\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install pytorch-lightning==1.9.5 torch torchvision numpy pandas matplotlib  scipy scikit-learn panel pytest click torchaudio  wandb torchmetrics accelerate datasets monai einops ema-pytorch fairscale deepspeed horovod\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!gdown --id 1pozv0Oxy9jGtZfO4Un3EOaWzJ9Ny49py\n",
-        "!unzip -q /content/data.zip"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -278,11 +259,10 @@
         "id": "qjXHoieyFGdK",
         "outputId": "9fee4a01-2265-48e0-b9ba-c96e43708334"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/gdown/cli.py:121: FutureWarning: Option `--id` was deprecated in version 4.3.1 and will be removed in 5.0. You don't need to pass it anymore to use a file ID.\n",
             "  warnings.warn(\n",
@@ -294,19 +274,15 @@
             "caution: filename not matched:  -qq\n"
           ]
         }
+      ],
+      "source": [
+        "!gdown --id 1pozv0Oxy9jGtZfO4Un3EOaWzJ9Ny49py\n",
+        "!unzip -q /content/data.zip"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python /content/diffusors/segmentation_chest.py --train_samples 400 \\\n",
-        "                                --val_samples 100 \\\n",
-        "                                --test_samples 100 \\\n",
-        "                                --datadir /content \\\n",
-        "                                --epochs 2 \\\n",
-        "                                --accelerator gpu \\\n",
-        "                                --strategy fsdp"
-      ],
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -314,11 +290,10 @@
         "id": "Hsu2V7988eya",
         "outputId": "1af2d326-6a76-4dab-81d7-d1452a2ee792"
       },
-      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mtuanvi1792k\u001b[0m (\u001b[33mdiffusors\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
             "2023-09-28 09:44:51.198063: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
@@ -620,16 +595,43 @@
             "\u001b[34m\u001b[1mwandb\u001b[0m: Find logs at: \u001b[35m\u001b[1m./wandb/run-20230928_094453-z8fzg4sl/logs\u001b[0m\n"
           ]
         }
+      ],
+      "source": [
+        "!python /content/diffusors/segmentation_chest.py --train_samples 100 \\\n",
+        "                                --val_samples 50 \\\n",
+        "                                --test_samples 50 \\\n",
+        "                                --datadir /content \\\n",
+        "                                --epochs 2 \\\n",
+        "                                --devices 1 \\\n",
+        "                                --strategy horovod \\\n",
+        "                                --batch_size 8"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "u8s3tJyhGsJv"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "V100",
+      "machine_shape": "hm",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
