--- a/diffusors_colab.ipynb
+++ b/diffusors_colab.ipynb
@@ -609,10 +609,172 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "u8s3tJyhGsJv"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mtuanvi1792k\u001b[0m (\u001b[33mdiffusors\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
+            "951\n",
+            "['./data/ChinaSet/processed/images/CHNCXR_0001_0.png']\n",
+            "951\n",
+            "['./data/ChinaSet/processed/labels/CHNCXR_0001_0.png']\n",
+            "15000\n",
+            "['./data/VinDR/train/000434271f63a053c4128a0ba6352c7f.png']\n",
+            "951\n",
+            "['./data/ChinaSet/processed/images/CHNCXR_0001_0.png']\n",
+            "951\n",
+            "['./data/ChinaSet/processed/labels/CHNCXR_0001_0.png']\n",
+            "3000\n",
+            "['./data/VinDR/test/002a34c58c5b758217ed1f584ccbcfe9.png']\n",
+            "951\n",
+            "['./data/ChinaSet/processed/images/CHNCXR_0001_0.png']\n",
+            "951\n",
+            "['./data/ChinaSet/processed/labels/CHNCXR_0001_0.png']\n",
+            "3000\n",
+            "['./data/VinDR/test/002a34c58c5b758217ed1f584ccbcfe9.png']\n",
+            "Global seed set to 42\n",
+            "ModelCheckpoint(save_last=True, save_top_k=-1, monitor=None) will duplicate the last checkpoint saved.\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: wandb version 0.15.12 is available!  To upgrade, please run:\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m:  $ pip install wandb --upgrade\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Tracking run with wandb version 0.15.11\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Run data is saved locally in \u001b[35m\u001b[1m/Users/vincenttran/Diffusion/diffusors/wandb/run-20231005_204041-3ff3fkc9\u001b[0m\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Run \u001b[1m`wandb offline`\u001b[0m to turn off syncing.\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Syncing run \u001b[33mdainty-totem-73\u001b[0m\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: ⭐️ View project at \u001b[34m\u001b[4mhttps://wandb.ai/diffusors/cycle-consistent-DDMM\u001b[0m\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: 🚀 View run at \u001b[34m\u001b[4mhttps://wandb.ai/diffusors/cycle-consistent-DDMM/runs/3ff3fkc9\u001b[0m\n",
+            "/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/loggers/wandb.py:395: UserWarning: There is a wandb run already in progress and newly created instances of `WandbLogger` will reuse this run. If this is not desired, call `wandb.finish()` before instantiating `WandbLogger`.\n",
+            "  rank_zero_warn(\n",
+            "Using bfloat16 Automatic Mixed Precision (AMP)\n",
+            "GPU available: True (mps), used: True\n",
+            "TPU available: False, using: 0 TPU cores\n",
+            "IPU available: False, using: 0 IPUs\n",
+            "HPU available: False, using: 0 HPUs\n",
+            "\n",
+            "  | Name            | Type         | Params\n",
+            "-------------------------------------------------\n",
+            "0 | diffusion_image | UNet2DModel  | 113 M \n",
+            "1 | diffusion_label | UNet2DModel  | 113 M \n",
+            "2 | loss_func       | SmoothL1Loss | 0     \n",
+            "-------------------------------------------------\n",
+            "227 M     Trainable params\n",
+            "0         Non-trainable params\n",
+            "227 M     Total params\n",
+            "909.349   Total estimated model params size (MB)\n",
+            "Sanity Checking: 0it [00:00, ?it/s]/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/monai/utils/deprecate_utils.py:321: FutureWarning: monai.transforms.io.dictionary LoadImaged.__init__:image_only: Current default value of argument `image_only=False` has been deprecated since version 1.1. It will be changed to `image_only=True` in version 1.3.\n",
+            "  warn_deprecated(argname, msg, warning_category)\n",
+            "/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/trainer/connectors/data_connector.py:488: PossibleUserWarning: Your `val_dataloader`'s sampler has shuffling enabled, it is strongly recommended that you turn shuffling off for val/test/predict dataloaders.\n",
+            "  rank_zero_warn(\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mtuanvi1792k\u001b[0m (\u001b[33mdiffusors\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mtuanvi1792k\u001b[0m (\u001b[33mdiffusors\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mtuanvi1792k\u001b[0m (\u001b[33mdiffusors\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mtuanvi1792k\u001b[0m (\u001b[33mdiffusors\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mtuanvi1792k\u001b[0m (\u001b[33mdiffusors\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mtuanvi1792k\u001b[0m (\u001b[33mdiffusors\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mtuanvi1792k\u001b[0m (\u001b[33mdiffusors\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mtuanvi1792k\u001b[0m (\u001b[33mdiffusors\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/Users/vincenttran/Diffusion/diffusors/segmentation_diffuser_two.py\", line 530, in <module>\n",
+            "    trainer.fit(\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/trainer/trainer.py\", line 608, in fit\n",
+            "    call._call_and_handle_interrupt(\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/trainer/call.py\", line 38, in _call_and_handle_interrupt\n",
+            "    return trainer_fn(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/trainer/trainer.py\", line 650, in _fit_impl\n",
+            "    self._run(model, ckpt_path=self.ckpt_path)\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/trainer/trainer.py\", line 1112, in _run\n",
+            "    results = self._run_stage()\n",
+            "              ^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/trainer/trainer.py\", line 1191, in _run_stage\n",
+            "    self._run_train()\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/trainer/trainer.py\", line 1204, in _run_train\n",
+            "    self._run_sanity_check()\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/trainer/trainer.py\", line 1276, in _run_sanity_check\n",
+            "    val_loop.run()\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/loops/loop.py\", line 199, in run\n",
+            "    self.advance(*args, **kwargs)\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/loops/dataloader/evaluation_loop.py\", line 152, in advance\n",
+            "    dl_outputs = self.epoch_loop.run(self._data_fetcher, dl_max_batches, kwargs)\n",
+            "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/loops/loop.py\", line 199, in run\n",
+            "    self.advance(*args, **kwargs)\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/loops/epoch/evaluation_epoch_loop.py\", line 121, in advance\n",
+            "    batch = next(data_fetcher)\n",
+            "            ^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/utilities/fetching.py\", line 184, in __next__\n",
+            "    return self.fetching_function()\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/utilities/fetching.py\", line 275, in fetching_function\n",
+            "    return self.move_to_device(batch)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/utilities/fetching.py\", line 294, in move_to_device\n",
+            "    batch = self.batch_to_device(batch)\n",
+            "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/loops/dataloader/evaluation_loop.py\", line 142, in batch_to_device\n",
+            "    batch = self.trainer._call_strategy_hook(\"batch_to_device\", batch, dataloader_idx=dataloader_idx)\n",
+            "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/trainer/trainer.py\", line 1494, in _call_strategy_hook\n",
+            "    output = fn(*args, **kwargs)\n",
+            "             ^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/strategies/strategy.py\", line 273, in batch_to_device\n",
+            "    return model._apply_batch_transfer_handler(batch, device=device, dataloader_idx=dataloader_idx)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/core/module.py\", line 342, in _apply_batch_transfer_handler\n",
+            "    batch = self._call_batch_hook(\"transfer_batch_to_device\", batch, device, dataloader_idx)\n",
+            "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/core/module.py\", line 330, in _call_batch_hook\n",
+            "    return trainer_method(hook_name, *args)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/trainer/trainer.py\", line 1356, in _call_lightning_module_hook\n",
+            "    output = fn(*args, **kwargs)\n",
+            "             ^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/pytorch_lightning/core/hooks.py\", line 632, in transfer_batch_to_device\n",
+            "    return move_data_to_device(batch, device)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/lightning_fabric/utilities/apply_func.py\", line 101, in move_data_to_device\n",
+            "    return apply_to_collection(batch, dtype=_TransferableDataType, function=batch_to)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/lightning_utilities/core/apply_func.py\", line 59, in apply_to_collection\n",
+            "    v = apply_to_collection(\n",
+            "        ^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/lightning_utilities/core/apply_func.py\", line 59, in apply_to_collection\n",
+            "    v = apply_to_collection(\n",
+            "        ^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/lightning_utilities/core/apply_func.py\", line 51, in apply_to_collection\n",
+            "    return function(data, *args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/vincenttran/miniconda3/envs/diffusion-venv/lib/python3.11/site-packages/lightning_fabric/utilities/apply_func.py\", line 95, in batch_to\n",
+            "    data_output = data.to(device, **kwargs)\n",
+            "                  ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "TypeError: Cannot convert a MPS Tensor to float64 dtype as the MPS framework doesn't support float64. Please use float32 instead.\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Waiting for W&B process to finish... \u001b[31m(failed 1).\u001b[0m Press Control-C to abort syncing.\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: 🚀 View run \u001b[33mdainty-totem-73\u001b[0m at: \u001b[34m\u001b[4mhttps://wandb.ai/diffusors/cycle-consistent-DDMM/runs/3ff3fkc9\u001b[0m\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: ️⚡ View job at \u001b[34m\u001b[4mhttps://wandb.ai/diffusors/cycle-consistent-DDMM/jobs/QXJ0aWZhY3RDb2xsZWN0aW9uOjEwNDQ1NDcwMw==/version_details/v1\u001b[0m\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Synced 6 W&B file(s), 0 media file(s), 2 artifact file(s) and 0 other file(s)\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Find logs at: \u001b[35m\u001b[1m./wandb/run-20231005_204041-3ff3fkc9/logs\u001b[0m\n"
+          ]
+        }
+      ],
+      "source": [
+        "!python segmentation_diffuser_two.py --train_samples 100 \\\n",
+        "                                --val_samples 50 \\\n",
+        "                                --test_samples 50 \\\n",
+        "                                --datadir . \\\n",
+        "                                --epochs 2 \\\n",
+        "                                --strategy ddp_spawn \\\n",
+        "                                --batch_size 4 \\\n",
+        "                                --accelerator mps"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": []
     }
@@ -629,7 +791,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.5"
     }
   },
   "nbformat": 4,
