log first image of each batch

--- a/diffusors_colab.ipynb
+++ b/diffusors_colab.ipynb
@@ -597,14 +597,15 @@
         }
       ],
       "source": [
-        "!python /content/diffusors/segmentation_chest.py --train_samples 100 \\\n",
-        "                                --val_samples 50 \\\n",
-        "                                --test_samples 50 \\\n",
+        "!python /content/diffusors/segmentation_diffuser_two.py --train_samples 400 \\\n",
+        "                                --val_samples 100 \\\n",
+        "                                --test_samples 80 \\\n",
         "                                --datadir /content \\\n",
-        "                                --epochs 2 \\\n",
+        "                                --epochs 10 \\\n",
         "                                --devices 1 \\\n",
-        "                                --strategy horovod \\\n",
-        "                                --batch_size 8"
+        "                                --strategy ddp \\\n",
+        "                                --batch_size 4 \\\n",
+        "                                --accelerator gpu"
       ]
     },
     {
