change loss fn to dice loss

--- a/diffusors_colab.ipynb
+++ b/diffusors_colab.ipynb
@@ -276,8 +276,18 @@
         }
       ],
       "source": [
-        "!gdown --id 1pozv0Oxy9jGtZfO4Un3EOaWzJ9Ny49py\n",
+        "!gdown --id 1JOh0ebI4lN4M1ovRbrPUB1J7C6dFtN3X\n",
         "!unzip -q /content/data.zip"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "https://drive.google.com/drive/folders/1JOh0ebI4lN4M1ovRbrPUB1J7C6dFtN3X?usp=share_link"
       ]
     },
     {
